feat todo-F03: done task toogle and change style it

--- a/front/src/index.css
+++ b/front/src/index.css
@@ -6,3 +6,13 @@
 body {
     background-color: var(--main-bg-color);
 }
+
+.title-through {
+  text-decoration: line-through;
+}
+.title-todo {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 17px;
+}
