--- a/front/src/assets/style/index.css
+++ b/front/src/assets/style/index.css
@@ -3,6 +3,7 @@
     --card-bg-color:#FAFAFA;
     --status-color-green:#80CC8C;
     --status-color-gray:#D4D4D4;
+    --primary-color:#0D6EFD;
 }
 body {
     background-color: var(--main-bg-color);
@@ -36,4 +37,12 @@ body {
 }
 .cursor-pointer {
   cursor: pointer;
+}
+.align-end {
+  display: flex;
+  justify-content: end;
+  gap:10px;
+}
+.bg-color-primary {
+  background-color: var(--primary-color) !important;
 }
